accord-prometheus-stack/alertmanager-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: alertmanager-ingress
  namespace: monitoring
spec:
  rules:
  - host: alertmanager-ui.uvarc.io
    http:
      paths:
      - path: /
        backend:
          serviceName: alertmanager-operated
          servicePort: 9093
